@@ -35,6 +35,13 @@ android {
     aaptOptions {
         noCompress "tflite"
     }
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -55,9 +62,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.10'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'org.tensorflow:tensorflow-lite:+'
+
+    testImplementation "org.mockito:mockito-core:1.9.5"
 }
